
[[v0.14.0]]
== 0.14.0 (16.01.2018)

CAUTION: The image manipulation query parameters `cropx`, `cropy`, `croph` and `cropw` have been replaced by the `rect` parameter. The `rect` parameter contains the needed values `rect=x,y,w,h`.

CAUTION: The image manipulation query parameter `width` was renamed to `w`. The parameter `height` was renamed to `h`.

CAUTION: It is now required to specify the crop mode when cropping an image. Possible crop modes are `rect` which will utilize the specified crop area or `fp` which will utilize the focal point information in order to crop the image.

icon:plus[] Image: It is now possible to specify a focal point within the binary field of an image.
                   This focal point can be used to automatically crop the image in a way so that the focused area is kept in the image.
                   The focal point can also be manually specified when requesting an image.
                   This will overrule any previously stored focal point information within the binary field.

icon:plus[] UI: The admin UI has been updated to use the renamed image parameters.

[[v0.13.3]] 
== 0.13.3 (12.01.2018)

icon:check[] Core: Optimized concurrency when handling binary data streams (e.g: downloading, image resizing)

icon:check[] Core: Fixed some bugs which left file handles open and thus clogged the system. This could lead a lockup of the system in some cases.

[[v0.13.2]]
== 0.13.2 (11.01.2018)

icon:plus[] Java Rest Client: It is now possible to retrieve the client version via `MeshRestClient.getPlainVersion()`.

icon:check[] Core: The consistency checks have been enhanced.

icon:check[] Core: Fixed some bugs which left file handles open and thus clogged the system. This could lead a lockup of the system in some cases.

[[v0.13.1]]
== 0.13.1 (05.01.2018)

icon:check[] Core: A Vert.x bug has been patched which caused HTTP requests to fail which had the "Connection: close" header set.
