@@ -50,6 +50,7 @@ import com.gentics.mesh.graphdb.spi.Database;
 import com.gentics.mesh.handler.ActionContext;
 import com.gentics.mesh.json.JsonUtil;
 import com.gentics.mesh.parameter.ImageManipulationParameters;
+import com.gentics.mesh.parameter.image.CropMode;
 import com.gentics.mesh.parameter.impl.ImageManipulationParametersImpl;
 import com.gentics.mesh.storage.BinaryStorage;
 import com.gentics.mesh.util.FileUtils;
@@ -110,8 +111,8 @@ public class BinaryFieldHandler extends AbstractHandler {
 			// }
 
 			Release release = ac.getRelease(node.getProject());
-			NodeGraphFieldContainer fieldContainer = node.findVersion(ac.getNodeParameters().getLanguageList(), release.getUuid(),
-					ac.getVersioningParameters().getVersion());
+			NodeGraphFieldContainer fieldContainer = node.findVersion(ac.getNodeParameters().getLanguageList(), release.getUuid(), ac
+					.getVersioningParameters().getVersion());
 			if (fieldContainer == null) {
 				throw error(NOT_FOUND, "object_not_found_for_version", ac.getVersioningParameters().getVersion());
 			}
@@ -419,6 +420,9 @@ public class BinaryFieldHandler extends AbstractHandler {
 				parameters.setWidth(transformation.getWidth());
 				parameters.setHeight(transformation.getHeight());
 				parameters.setRect(transformation.getCropRect());
+				if (parameters.getRect() != null) {
+					parameters.setCropMode(CropMode.RECT);
+				}
 				if (!parameters.isSet()) {
 					throw error(BAD_REQUEST, "error_no_image_transformation", fieldName);
 				}
@@ -444,21 +448,21 @@ public class BinaryFieldHandler extends AbstractHandler {
 
 					// Resize the original image and store the result in the filesystem
 					Single<TransformationResult> obsTransformation = imageManipulator.handleResize(stream, binaryUuid, parameters).flatMap(file -> {
-								Observable<Buffer> obs = RxUtil.toBufferObs(file.getFile());
-								Observable<Buffer> resizedImageData = obs.publish().autoConnect(2);
+						Observable<Buffer> obs = RxUtil.toBufferObs(file.getFile());
+						Observable<Buffer> resizedImageData = obs.publish().autoConnect(2);
 
-								// Hash the resized image data and store it using the computed fieldUuid + hash
-								Single<String> hash = FileUtils.hash(resizedImageData);
+						// Hash the resized image data and store it using the computed fieldUuid + hash
+						Single<String> hash = FileUtils.hash(resizedImageData);
 
-								// The image was stored and hashed. Now we need to load the stored file again and check the image properties
-								Single<ImageInfo> info = imageManipulator.readImageInfo(resizedImageData);
+						// The image was stored and hashed. Now we need to load the stored file again and check the image properties
+						Single<ImageInfo> info = imageManipulator.readImageInfo(resizedImageData);
 
-								return Single.zip(hash, info, (hashV, infoV) -> {
-									// Return a POJO which hold all information that is needed to update the field
-									TransformationResult result = new TransformationResult(hashV, file.getProps().size(), infoV, file.getPath());
-									return Single.just(result);
-								}).flatMap(e -> e);
-							});
+						return Single.zip(hash, info, (hashV, infoV) -> {
+							// Return a POJO which hold all information that is needed to update the field
+							TransformationResult result = new TransformationResult(hashV, file.getProps().size(), infoV, file.getPath());
+							return Single.just(result);
+						}).flatMap(e -> e);
+					});
 
 					// Now that the binary data has been resized and inspected we can use this information to create a new binary and store it.
 					TransformationResult result = obsTransformation.blockingGet();
