@@ -12,7 +12,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<projectRoot>${project.basedir}</projectRoot>
-		<mesh.admin-ui.version>0.8.5</mesh.admin-ui.version>
+		<mesh.admin-ui.version>0.8.6</mesh.admin-ui.version>
 
 		<asm.version>3.3.1</asm.version>
 		<spring.security.version>4.2.3.RELEASE</spring.security.version>
